--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://cricar6.github.io/portfolio-react",
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
@@ -19,7 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch --port 5000"
+    "server": "json-server --watch --port 5000",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
     "@iconify/icons-gg": "^1.1.0",
     "@iconify/icons-heroicons-outline": "^1.1.2",
     "@iconify/icons-ph": "^1.1.2",
-    "@iconify/react": "^1.1.4"
+    "@iconify/react": "^1.1.4",
+    "gh-pages": "^3.1.0"
   }
 }
